[gd_scene load_steps=5 format=3 uid="uid://3b0xhwyih82m"]

[ext_resource type="Script" path="res://winner.gd" id="1_t7qrk"]
[ext_resource type="Texture2D" uid="uid://wbi8fk2xyt3" path="res://Winner.png" id="2_s6i4b"]
[ext_resource type="Texture2D" uid="uid://dfyxux1pthm3h" path="res://Red Idle.png" id="3_da3vc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_esojg"]

[node name="Area2D" type="Area2D" node_paths=PackedStringArray("sprite")]
position = Vector2(650, 386)
scale = Vector2(1.031, 1.06)
script = ExtResource("1_t7qrk")
sprite = NodePath("Winner")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-10.6693, -20.7547)
scale = Vector2(2.9, 2.9)
shape = SubResource("CircleShape2D_esojg")

[node name="Winner" type="Sprite2D" parent="."]
position = Vector2(-6.78955, -143.396)
scale = Vector2(0.118597, 0.132075)
texture = ExtResource("2_s6i4b")

[node name="Restart" type="Button" parent="."]
offset_left = -58.1959
offset_top = -242.453
offset_right = 50.8041
offset_bottom = -195.453
text = "main menu"

[node name="Restart2" type="TextureButton" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("3_da3vc")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
